puyh
>>> 1+3
4
>>> 2-1
1
>>> 4**5
1024
>>> 1/1
1
>>> 4/2
2
>>> 4!5
  File "<stdin>", line 1
    4!5
     ^
SyntaxError: invalid syntax
>>> 7&8
0
>>> 8|9
9
>>> 100%6
4
>>> 589
589
>>> 8*9
72

